--- a/index.html
+++ b/index.html
@@ -1138,11 +1138,11 @@ Working on video classication problems, using state of the art computer vision m
   <div class="page-footer">
     <div class="container">
       <footer class="site-footer">
-        <p class="powered-by">
-          Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-        </p>
-        <p class="powered-by">
-        Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target="_blank" rel="noopener">Wowchemy</a> — the free, <a href="https://github.com/wowchemy/wowchemy-hugo-modules" target="_blank" rel="noopener">open source</a> website builder that empowers creators.
+<!--        <p class="powered-by">-->
+<!--          -->
+<!--        </p>-->
+        <p class="powered-by" style="font-size:9.9px">
+          Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>. Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target="_blank" rel="noopener">Wowchemy</a> — the free, <a href="https://github.com/wowchemy/wowchemy-hugo-modules" target="_blank" rel="noopener">open source</a> website builder that empowers creators.
         </p>
       </footer>
     </div>
