--- a/index.html
+++ b/index.html
@@ -449,31 +449,57 @@
         <div class="col-12 col-lg-8">
           <div class="media stream-item">
             <div class="ml-3">
-              <a href="/publication/vasr/">
+              <a href="https://vasr-dataset.github.io/">
                 <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
-              <div class="section-subheading article-title mb-0 mt-0">
-                <a href="/post/managing_research/" >Managing Research</a>
-              </div>
-              <a href="/post/managing_research/"  class="summary-link">
-                <div class="article-style">
-                  This talk deals with several research related questions. For example findings new research ideas, choose a research topic, staying updated with new research, working with your supervisors, and more.
+              <div class="section-subheading article-title mb-1 mt-3">
+                  <a href="https://vasr-dataset.github.io/">VASR: Visual Analogies of Situation Recognition</a>
                 </div>
-              </a>
+<!--              <a href="/post/managing_research/"  class="summary-link">-->
+<!--                <div class="article-style">-->
+<!--                  This talk deals with several research related questions. For example findings new research ideas, choose a research topic, staying updated with new research, working with your supervisors, and more.-->
+<!--                </div>-->
+<!--              </a>-->
               <div class="stream-meta article-metadata">
                 <div class="article-metadata">
                   <div>
-                    <span >Yonatan Bitton</span>
+                    <span >Yonatan Bitton</span>,
+                    <span >Ron Yosef</span>,
+                    <span >Eli Strugo</span>,
+                    <span >Dafna Shahaf</span>,
+                    <span >Roy Schwartz</span>,
+                    <span >Gabriel Stanovsky</span>
                   </div>
                   <span class="article-date">
-                    Jan 5, 2022
+                    Dec 2022
+                  </span>
+                  <span class="pub-publication">
+                    In <em>AAAI 2023</em>
                   </span>
                   <span class="middot-divider"></span>
-                  <span class="article-reading-time">
-                    0 min read
-                  </span>
+                  <div class="btn-links">
+                  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">
+                  Website
+                  </a>
+                  <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">
+                    PDF
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                        data-filename="/publication/vasr/cite.bib">
+                    Cite
+                  </a>
+                  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">
+                    Code
+                  </a>
+                  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">
+                    Hugging Face
+                  </a>
+                </div>
+<!--                  <span class="article-reading-time">-->
+<!--                    0 min read-->
+<!--                  </span>-->
                 </div>
               </div>
             </div>
