--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
         <div class="col-12 col-lg-8">
           <div class="media stream-item">
-            <div class="mr-3">
+            <div class="mr-3 mt-1">
               <a href="https://vasr-dataset.github.io/">
                 <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
               </a>
