--- a/index.html
+++ b/index.html
@@ -448,13 +448,13 @@
         </div>
         <div class="col-12 col-lg-8">
           <div class="media stream-item">
-            <div class="mr-3 mt-1">
+            <div class="mr-3">
               <a href="https://vasr-dataset.github.io/">
                 <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
-              <div class="section-subheading article-title mb-1 mt-3">
+              <div class="section-subheading article-title">
                   <a href="https://vasr-dataset.github.io/">VASR: Visual Analogies of Situation Recognition</a>
                 </div>
 <!--              <a href="/post/managing_research/"  class="summary-link">-->
