--- a/index.html
+++ b/index.html
@@ -497,6 +497,62 @@
             </div>
           </div>
           <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://vasr-dataset.github.io/">
+                <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="/publication/winogavil/">WinoGAViL: Gamified Association Benchmark to Challenge Vision-and-Language Models</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+                    <span >Nitzan Bitton-Guetta</span>,
+                    <span >Ron Yosef</span>,
+                    <span >Yuval Elovici</span>,
+                    <span >Mohit Bansal</span>,
+                    <span >Gabriel Stanovsky</span>,
+                    <span >Roy Schwartz</span>
+                  </div>
+                  <span class="article-date">
+                    Jul 2022
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+                    In <em>NeurIPS 2022</em> (Selected as Oral Presentation)
+                  </span>
+                    <div class="btn-links">
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://winogavil.github.io/" target="_blank" rel="noopener">
+                        Website
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/winogavil/winogavil.pdf" target="_blank" rel="noopener">
+                        PDF
+                      </a>
+                      <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                              data-filename="/publication/winogavil/cite.bib">
+                        Cite
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/WinoGAViL/WinoGAViL-experiments" target="_blank" rel="noopener">
+                        Code
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/winogavil/winogavil_poster_neurips.pdf" target="_blank" rel="noopener">
+                        Poster
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://paperswithcode.com/dataset/winogavil" target="_blank" rel="noopener">
+                        Papers With Code
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/winogavil" target="_blank" rel="noopener">
+                        Hugging Face
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="media stream-item">
 <!--            <div class="media-body">-->
 <!--              <div class="section-subheading article-title mb-0 mt-0">-->
 <!--                <a href="/post/managing_research/" >Managing Research</a>-->
