--- a/index.html
+++ b/index.html
@@ -498,19 +498,19 @@
           </div>
           <div class="media stream-item">
             <div class="mr-3">
-              <a href="https://vasr-dataset.github.io/">
-                <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
+              <a href="https://winogavil.github.io/">
+                <div class="img-hover-zoom"><img src="/publication/winogavil/featured.png" class="article-banner" alt="WinoGAViL: Gamified Association Benchmark to Challenge Vision-and-Language Models" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
               <div class="section-subheading article-title">
-                  <a href="/publication/winogavil/">WinoGAViL: Gamified Association Benchmark to Challenge Vision-and-Language Models</a>
+                  <a href="https://winogavil.github.io/">WinoGAViL: Gamified Association Benchmark to Challenge Vision-and-Language Models</a>
                 </div>
               <div class="stream-meta article-metadata">
                 <div class="article-metadata">
                   <div>
-                    <span >Yonatan Bitton</span>,
-                    <span >Nitzan Bitton-Guetta</span>,
+                    <span >Yonatan Bitton*</span>,
+                    <span >Nitzan Bitton-Guetta*</span>,
                     <span >Ron Yosef</span>,
                     <span >Yuval Elovici</span>,
                     <span >Mohit Bansal</span>,
@@ -552,37 +552,7 @@
               </div>
             </div>
           </div>
-          <div class="media stream-item">
-<!--            <div class="media-body">-->
-<!--              <div class="section-subheading article-title mb-0 mt-0">-->
-<!--                <a href="/post/managing_research/" >Managing Research</a>-->
-<!--              </div>-->
-<!--              <a href="/post/managing_research/"  class="summary-link">-->
-<!--                <div class="article-style">-->
-<!--                  This talk deals with several research related questions. For example findings new research ideas, choose a research topic, staying updated with new research, working with your supervisors, and more.-->
-<!--                </div>-->
-<!--              </a>-->
-<!--              <div class="stream-meta article-metadata">-->
-<!--                <div class="article-metadata">-->
-<!--                  <div>-->
-<!--                    <span >Yonatan Bitton</span>-->
-<!--                  </div>-->
-<!--                  <span class="article-date">-->
-<!--                    Jan 5, 2022-->
-<!--                  </span>-->
-<!--                  <span class="middot-divider"></span>-->
-<!--                  <span class="article-reading-time">-->
-<!--                    0 min read-->
-<!--                  </span>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-            <div class="ml-3">
-              <a href="/post/managing_research/" >
-                <img src="/post/managing_research/featured_hub5b4b50c774fc1c76bbf2efa53919e8f_828066_150x0_resize_lanczos_3.png" alt="Managing Research" loading="lazy">
-              </a>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
