--- a/index.html
+++ b/index.html
@@ -552,6 +552,53 @@
               </div>
             </div>
           </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://arxiv.org/pdf/2109.02040.pdf">
+                <div class="img-hover-zoom"><img src="/publication/data_efficient/featured_hu89ddd0647d2cfdbbf6482c615d0017c6_661451_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Data Efficient Masked Language Modeling for Vision and Language" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://arxiv.org/pdf/2109.02040.pdf">Data Efficient Masked Language Modeling for Vision and Language</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+                    <span >Gabriel Stanovsky</span>,
+                    <span >Michael Elhadad</span>,
+                    <span >Roy Schwartz</span>
+                  </div>
+                  <span class="article-date">
+                    September 2021
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+                    In <em>Findings of EMNLP 2021</em>
+                  </span>
+                    <div class="btn-links">
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/data_efficient/data_efficient.pdf" target="_blank" rel="noopener">
+                        PDF
+                      </a>
+                      <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                              data-filename="/publication/data_efficient/cite.bib">
+                        Cite
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yonatanbitton/data_efficient_masked_language_modeling_for_vision_and_language" target="_blank" rel="noopener">
+                        Code
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/data_efficient/data_efficient_poster.pdf" target="_blank" rel="noopener">
+                        Poster
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.youtube.com/watch?v=A-KOkb5CURA" target="_blank" rel="noopener">
+                        Video
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
