--- a/index.html
+++ b/index.html
@@ -599,6 +599,52 @@
               </div>
             </div>
           </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://arxiv.org/pdf/2103.09591.pdf">
+                <div class="img-hover-zoom"><img src="/publication/contrast_sets/featured_hue00ceed770a4d5dafe8725e68e820d5a_789004_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Data Efficient Masked Language Modeling for Vision and Language" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://arxiv.org/pdf/2103.09591.pdf">Automatic Generation of Contrast Sets from Scene Graphs</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+                    <span >Gabriel Stanovsky</span>,
+                    <span >Roy Schwartz</span>,
+                    <span >Michael Elhadad</span>
+                  </div>
+                  <span class="article-date">
+                    March 2021
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+                    In <em>NAACL 2021</em>
+                  </span>
+                    <div class="btn-links">
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets.pdf" target="_blank" rel="noopener">
+                        PDF
+                      </a>
+                      <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename="/publication/contrast_sets/cite.bib">
+                        Cite
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yonatanbitton/automatic_generation_of_contrast_sets_from_scene_graphs" target="_blank" rel="noopener">
+                        Code
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets_poster.pdf" target="_blank" rel="noopener">
+                        Poster
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://youtu.be/IogU2qbAsm0" target="_blank" rel="noopener">
+                        Video
+                      </a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -795,21 +841,20 @@
   <!--              </a>-->
                 <div class="btn-links">
                   <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets.pdf" target="_blank" rel="noopener">
-  PDF
-  </a>
-                  <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
-        data-filename="/publication/contrast_sets/cite.bib">
-  Cite
-  </a>
+                    PDF
+                  </a>
+                  <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename="/publication/contrast_sets/cite.bib">
+                    Cite
+                  </a>
                   <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yonatanbitton/automatic_generation_of_contrast_sets_from_scene_graphs" target="_blank" rel="noopener">
-  Code
-  </a>
+                    Code
+                  </a>
                   <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets_poster.pdf" target="_blank" rel="noopener">
-  Poster
-  </a>
+                    Poster
+                  </a>
                   <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://youtu.be/IogU2qbAsm0" target="_blank" rel="noopener">
-  Video
-  </a>
+                    Video
+                  </a>
                 </div>
               </div>
             </div>
