--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             </div>
           </div>
           <div class="media stream-item">
-            <div class="mr-3">
+            <div class="align-middle">
               <a href="https://arxiv.org/pdf/2103.09591.pdf">
                 <div class="img-hover-zoom"><img src="/publication/contrast_sets/featured_hue00ceed770a4d5dafe8725e68e820d5a_789004_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Data Efficient Masked Language Modeling for Vision and Language" loading="lazy"></div>
               </a>
