--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
-                    In <em>AAAI 2023</em>
+                    <em>AAAI 2023</em>
                   </span>
                     <div class="btn-links">
                     <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">
@@ -522,7 +522,7 @@
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
-                    In <em>NeurIPS 2022</em> (Selected as Oral Presentation)
+                    <em>NeurIPS 2022</em> (Selected as Oral Presentation)
                   </span>
                     <div class="btn-links">
                       <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://winogavil.github.io/" target="_blank" rel="noopener">
@@ -575,7 +575,7 @@
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
-                    In <em>Findings of EMNLP 2021</em>
+                    <em>Findings of EMNLP 2021</em>
                   </span>
                     <div class="btn-links">
                       <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/data_efficient/data_efficient.pdf" target="_blank" rel="noopener">
@@ -622,7 +622,7 @@
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
-                    In <em>NAACL 2021</em>
+                    <em>NAACL 2021</em>
                   </span>
                     <div class="btn-links">
                       <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets.pdf" target="_blank" rel="noopener">
