--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
   </section>
 
 
-  <section id="posts" class="home-section wg-pages  "  >
+  <section id="posts" class="home-section wg-featured  "  >
     <div class="home-section-bg " >
     </div>
     <div class="container">
@@ -651,7 +651,7 @@
     </div>
   </section>
 
-  <section id="featured" class="home-section wg-featured  "  >
+  <section id="featured" class="home-section wg-pages  "  >
      <div class="home-section-bg " >
      </div>
       <div class="container">
