--- a/index.html
+++ b/index.html
@@ -645,6 +645,54 @@
               </div>
             </div>
           </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://academic.oup.com/jamia/article/27/10/1585/5903800">
+                <div class="img-hover-zoom"><img src="###" class="article-banner" alt="Cross lingual Unified Medical Language System entity linking in online health communities" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://academic.oup.com/jamia/article/27/10/1585/5903800">Cross lingual Unified Medical Language System entity linking in online health communities</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+                    <span >Raphael Cohen</span>,
+                    <span >Tamar Schifter</span>,
+                    <span >Eitan Bachmat</span>,
+                    <span >Michael Elhadad</span>,
+                    <span >Noémie Elhadad</span>,
+                  </div>
+                  <span class="article-date">
+                    Sep 2020
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+                    <em>JAMIA 2020</em>
+                  </span>
+                    <div class="btn-links">
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/cross_lingual_entity_linking/cross_lingual_entity_linking.pdf" target="_blank" rel="noopener">
+                        PDF
+                      </a>
+                      <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename="/publication/cross_lingual_entity_linking/cite.bib">
+                        Cite
+                      </a>
+                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/yonatanbitton/mdtel" target="_blank" rel="noopener">
+                        Code
+                      </a>
+<!--                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/contrast_sets/contrast_sets_poster.pdf" target="_blank" rel="noopener">-->
+<!--                        Poster-->
+<!--                      </a>-->
+<!--                      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://youtu.be/IogU2qbAsm0" target="_blank" rel="noopener">-->
+<!--                        Video-->
+<!--                      </a>-->
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
