--- a/index.html
+++ b/index.html
@@ -449,6 +449,202 @@
         <div class="col-12 col-lg-8">
           <div class="media stream-item">
             <div class="mr-3">
+              <a href="https://laion.ai/blog/open-flamingo/">
+                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="OpenFlamingo: An open-source framework for training vision-language models with in-context learning" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://laion.ai/blog/open-flamingo/">OpenFlamingo: An open-source framework for training vision-language models with in-context learning</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+                    <span >Ron Yosef</span>,
+                    <span >Eli Strugo</span>,
+                    <span >Dafna Shahaf</span>,
+                    <span >Roy Schwartz</span>,
+                    <span >Gabriel Stanovsky</span>
+                  </div>
+                  <span class="article-date">
+                    Dec 2022
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+<!--                    <em>AAAI 2023</em>-->
+                  </span>
+                    <div class="btn-links">
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">
+                    Website
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">
+                      PDF
+                    </a>
+                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                          data-filename="/publication/vasr/cite.bib">
+                      Cite
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">
+                      Code
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">
+                      Hugging Face
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://arxiv.org/abs/2303.15445">
+                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="IRFL: Image Recognition of Figurative Language" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://arxiv.org/abs/2303.15445">IRFL: Image Recognition of Figurative Language</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Ron Yosef</span>,
+                    <span >Yonatan Bitton</span>,
+                    <span >Dafna Shahaf</span>
+                  </div>
+                  <span class="article-date">
+                    Mar 2023
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+<!--                    <em>AAAI 2023</em>-->
+                  </span>
+                    <div class="btn-links">
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.15445" target="_blank" rel="noopener">
+                    Website
+                    </a>
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
+<!--                      PDF-->
+<!--                    </a>-->
+<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
+<!--                          data-filename="/publication/vasr/cite.bib">-->
+<!--                      Cite-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
+<!--                      Code-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">-->
+<!--                      Hugging Face-->
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="https://whoops-benchmark.github.io/">
+                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="WHOOPS! A Vision-and-Language Commonsense Benchmark of Heterogeneous Objects and Situations" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="https://whoops-benchmark.github.io/">WHOOPS! A Vision-and-Language Commonsense Benchmark of Heterogeneous Objects and Situations</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Nitzan Bitton-Guetta*</span>,
+                    <span >Yonatan Bitton*</span>,
+                    <span >Jack Hessel</span>,
+                    <span >Ludwig Schmidt</span>,
+                    <span >Yuval Elovici</span>,
+                    <span >Gabriel Stanovsky</span>,
+                    <span >Roy Schwartz</span>
+                  </div>
+                  <span class="article-date">
+                    Mar 2023
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+<!--                    <em>AAAI 2023</em>-->
+                  </span>
+                    <div class="btn-links">
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://whoops-benchmark.github.io/" target="_blank" rel="noopener">
+                    Website
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/whoops/WHOOPS_paper.pdf" target="_blank" rel="noopener">
+                      PDF
+                    </a>
+<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
+<!--                          data-filename="/publication/vasr/cite.bib">-->
+<!--                      Cite-->
+<!--                    </a>-->
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://colab.research.google.com/drive/1av7JdDk005qQL6WdAVL0kFlah7VXV0Md?usp=sharing" target="_blank" rel="noopener">
+                      Evaluation Code
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/whoops" target="_blank" rel="noopener">
+                      Hugging Face
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="media stream-item">
+            <div class="mr-3">
+              <a href="">
+                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="DataComp: In search of the next generation of multimodal datasets via data scaling" loading="lazy"></div>
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="section-subheading article-title">
+                  <a href="">DataComp: In search of the next generation of multimodal datasets via data scaling</a>
+                </div>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>,
+<!--                    <span >Ron Yosef</span>,-->
+<!--                    <span >Eli Strugo</span>,-->
+<!--                    <span >Dafna Shahaf</span>,-->
+<!--                    <span >Roy Schwartz</span>,-->
+<!--                    <span >Gabriel Stanovsky</span>-->
+                  </div>
+                  <span class="article-date">
+                    ? 2023
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="pub-publication">
+                    <em></em>
+                  </span>
+                    <div class="btn-links">
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">-->
+<!--                    Website-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
+<!--                      PDF-->
+<!--                    </a>-->
+<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
+<!--                          data-filename="/publication/vasr/cite.bib">-->
+<!--                      Cite-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
+<!--                      Code-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">-->
+<!--                      Hugging Face-->
+<!--                    </a>-->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="media stream-item">
+            <div class="mr-3">
               <a href="https://vasr-dataset.github.io/">
                 <div class="img-hover-zoom"><img src="/publication/vasr/featured.png" class="article-banner" alt="VASR: Visual Analogies of Situation Recognition" loading="lazy"></div>
               </a>
