--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
                     <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2303.15445" target="_blank" rel="noopener">
                     Website
                     </a>
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
-<!--                      PDF-->
-<!--                    </a>-->
-<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
-<!--                          data-filename="/publication/vasr/cite.bib">-->
-<!--                      Cite-->
-<!--                    </a>-->
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/IRFL/IRFL.pdf" target="_blank" rel="noopener">
+                      PDF
+                    </a>
+                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                          data-filename="/publication/IRFL/cite.bib">
+                      Cite
+                    </a>
 <!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
 <!--                      Code-->
 <!--                    </a>-->
