--- a/index.html
+++ b/index.html
@@ -461,36 +461,36 @@
                 <div class="article-metadata">
                   <div>
                     <span >Yonatan Bitton</span>,
-                    <span >Ron Yosef</span>,
-                    <span >Eli Strugo</span>,
-                    <span >Dafna Shahaf</span>,
-                    <span >Roy Schwartz</span>,
-                    <span >Gabriel Stanovsky</span>
+<!--                    <span >Ron Yosef</span>,-->
+<!--                    <span >Eli Strugo</span>,-->
+<!--                    <span >Dafna Shahaf</span>,-->
+<!--                    <span >Roy Schwartz</span>,-->
+<!--                    <span >Gabriel Stanovsky</span>-->
                   </div>
                   <span class="article-date">
-                    Dec 2022
+                    ? 2022
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
 <!--                    <em>AAAI 2023</em>-->
                   </span>
                     <div class="btn-links">
-                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">
-                    Website
-                    </a>
-                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">
-                      PDF
-                    </a>
-                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
-                          data-filename="/publication/vasr/cite.bib">
-                      Cite
-                    </a>
-                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">
-                      Code
-                    </a>
-                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">
-                      Hugging Face
-                    </a>
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">-->
+<!--                    Website-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
+<!--                      PDF-->
+<!--                    </a>-->
+<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
+<!--                          data-filename="/publication/vasr/cite.bib">-->
+<!--                      Cite-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
+<!--                      Code-->
+<!--                    </a>-->
+<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">-->
+<!--                      Hugging Face-->
+<!--                    </a>-->
                   </div>
                 </div>
               </div>
@@ -577,10 +577,10 @@
                     <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/whoops/WHOOPS_paper.pdf" target="_blank" rel="noopener">
                       PDF
                     </a>
-<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
-<!--                          data-filename="/publication/vasr/cite.bib">-->
-<!--                      Cite-->
-<!--                    </a>-->
+                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+                          data-filename="/publication/whoops/cite.bib">
+                      Cite
+                    </a>
                     <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://colab.research.google.com/drive/1av7JdDk005qQL6WdAVL0kFlah7VXV0Md?usp=sharing" target="_blank" rel="noopener">
                       Evaluation Code
                     </a>
