--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           <div class="media stream-item">
             <div class="mr-3">
               <a href="https://arxiv.org/abs/2303.15445">
-                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="IRFL: Image Recognition of Figurative Language" loading="lazy"></div>
+                <div class="img-hover-zoom"><img src="/publication/IRFL/IRFL_fig1.jpg" class="article-banner" alt="IRFL: Image Recognition of Figurative Language" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
