--- a/index.html
+++ b/index.html
@@ -460,24 +460,33 @@
               <div class="stream-meta article-metadata">
                 <div class="article-metadata">
                   <div>
+                    <span >Anas Awadalla</span>,
+                    <span >Irena Gao</span>,
+                    <span >Joshua Gardner</span>,
+                    <span >Jack Hessel</span>,
+                    <span >Yusuf Hanafy</span>,
+                    <span >Wanrong Zhu</span>,
+                    <span >Kalyani Marathe</span>,
                     <span >Yonatan Bitton</span>,
-<!--                    <span >Ron Yosef</span>,-->
-<!--                    <span >Eli Strugo</span>,-->
-<!--                    <span >Dafna Shahaf</span>,-->
-<!--                    <span >Roy Schwartz</span>,-->
-<!--                    <span >Gabriel Stanovsky</span>-->
+                    <span >Samir Gadre</span>,
+                    <span >Jenia Jitsev</span>,
+                    <span >Simon Kornblith</span>,
+                    <span >Pang Wei Koh</span>,
+                    <span >Gabriel Ilharco</span>,
+                    <span >Mitchell Wortsman</span>,
+                    <span >Ludwig Schmidt</span>
                   </div>
                   <span class="article-date">
-                    ? 2022
+                    Mar 2022
                   </span>
                   <span class="middot-divider"></span>
                   <span class="pub-publication">
 <!--                    <em>AAAI 2023</em>-->
                   </span>
                     <div class="btn-links">
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">-->
-<!--                    Website-->
-<!--                    </a>-->
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://laion.ai/blog/open-flamingo/" target="_blank" rel="noopener">
+                    Website
+                    </a>
 <!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
 <!--                      PDF-->
 <!--                    </a>-->
@@ -485,12 +494,12 @@
 <!--                          data-filename="/publication/vasr/cite.bib">-->
 <!--                      Cite-->
 <!--                    </a>-->
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
-<!--                      Code-->
-<!--                    </a>-->
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">-->
-<!--                      Hugging Face-->
-<!--                    </a>-->
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/mlfoundations/open_flamingo" target="_blank" rel="noopener">
+                      Code
+                    </a>
+                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/openflamingo/OpenFlamingo-9B" target="_blank" rel="noopener">
+                      Hugging Face
+                    </a>
                   </div>
                 </div>
               </div>
@@ -592,55 +601,55 @@
               </div>
             </div>
           </div>
-          <div class="media stream-item">
-            <div class="mr-3">
-              <a href="">
-                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="DataComp: In search of the next generation of multimodal datasets via data scaling" loading="lazy"></div>
-              </a>
-            </div>
-            <div class="media-body">
-              <div class="section-subheading article-title">
-                  <a href="">DataComp: In search of the next generation of multimodal datasets via data scaling</a>
-                </div>
-              <div class="stream-meta article-metadata">
-                <div class="article-metadata">
-                  <div>
-                    <span >Yonatan Bitton</span>,
-<!--                    <span >Ron Yosef</span>,-->
-<!--                    <span >Eli Strugo</span>,-->
-<!--                    <span >Dafna Shahaf</span>,-->
-<!--                    <span >Roy Schwartz</span>,-->
-<!--                    <span >Gabriel Stanovsky</span>-->
-                  </div>
-                  <span class="article-date">
-                    ? 2023
-                  </span>
-                  <span class="middot-divider"></span>
-                  <span class="pub-publication">
-                    <em></em>
-                  </span>
-                    <div class="btn-links">
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">-->
-<!--                    Website-->
-<!--                    </a>-->
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">-->
-<!--                      PDF-->
-<!--                    </a>-->
-<!--                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"-->
-<!--                          data-filename="/publication/vasr/cite.bib">-->
-<!--                      Cite-->
-<!--                    </a>-->
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">-->
-<!--                      Code-->
-<!--                    </a>-->
-<!--                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">-->
-<!--                      Hugging Face-->
-<!--                    </a>-->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+<!--          <div class="media stream-item">-->
+<!--            <div class="mr-3">-->
+<!--              <a href="">-->
+<!--                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="DataComp: In search of the next generation of multimodal datasets via data scaling" loading="lazy"></div>-->
+<!--              </a>-->
+<!--            </div>-->
+<!--            <div class="media-body">-->
+<!--              <div class="section-subheading article-title">-->
+<!--                  <a href="">DataComp: In search of the next generation of multimodal datasets via data scaling</a>-->
+<!--                </div>-->
+<!--              <div class="stream-meta article-metadata">-->
+<!--                <div class="article-metadata">-->
+<!--                  <div>-->
+<!--                    <span >Yonatan Bitton</span>,-->
+<!--&lt;!&ndash;                    <span >Ron Yosef</span>,&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span >Eli Strugo</span>,&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span >Dafna Shahaf</span>,&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span >Roy Schwartz</span>,&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span >Gabriel Stanovsky</span>&ndash;&gt;-->
+<!--                  </div>-->
+<!--                  <span class="article-date">-->
+<!--                    ? 2023-->
+<!--                  </span>-->
+<!--                  <span class="middot-divider"></span>-->
+<!--                  <span class="pub-publication">-->
+<!--                    <em></em>-->
+<!--                  </span>-->
+<!--                    <div class="btn-links">-->
+<!--&lt;!&ndash;                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://vasr-dataset.github.io/" target="_blank" rel="noopener">&ndash;&gt;-->
+<!--&lt;!&ndash;                    Website&ndash;&gt;-->
+<!--&lt;!&ndash;                    </a>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/vasr/vasr.pdf" target="_blank" rel="noopener">&ndash;&gt;-->
+<!--&lt;!&ndash;                      PDF&ndash;&gt;-->
+<!--&lt;!&ndash;                    </a>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"&ndash;&gt;-->
+<!--&lt;!&ndash;                          data-filename="/publication/vasr/cite.bib">&ndash;&gt;-->
+<!--&lt;!&ndash;                      Cite&ndash;&gt;-->
+<!--&lt;!&ndash;                    </a>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/vasr-dataset/vasr" target="_blank" rel="noopener">&ndash;&gt;-->
+<!--&lt;!&ndash;                      Code&ndash;&gt;-->
+<!--&lt;!&ndash;                    </a>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://huggingface.co/datasets/nlphuji/vasr" target="_blank" rel="noopener">&ndash;&gt;-->
+<!--&lt;!&ndash;                      Hugging Face&ndash;&gt;-->
+<!--&lt;!&ndash;                    </a>&ndash;&gt;-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
 
           <div class="media stream-item">
