--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
           <div class="media stream-item">
             <div class="mr-3">
               <a href="https://academic.oup.com/jamia/article/27/10/1585/5903800">
-                <div class="img-hover-zoom"><img src="###" class="article-banner" alt="Cross lingual Unified Medical Language System entity linking in online health communities" loading="lazy"></div>
+                <div class="img-hover-zoom"><img src="/publication/cross_lingual_entity_linking/cross_fig.jpeg" class="article-banner" alt="Cross lingual Unified Medical Language System entity linking in online health communities" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
