--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
           <div class="media stream-item">
             <div class="mr-3">
               <a href="https://laion.ai/blog/open-flamingo/">
-                <div class="img-hover-zoom"><img src="####" class="article-banner" alt="OpenFlamingo: An open-source framework for training vision-language models with in-context learning" loading="lazy"></div>
+                <div class="img-hover-zoom"><img src="/publication/open-flamingo/open-flamingo.jpeg" class="article-banner" alt="OpenFlamingo: An open-source framework for training vision-language models with in-context learning" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
