--- a/index.html
+++ b/index.html
@@ -958,33 +958,20 @@
         <div class="col-12 col-lg-8">
           <div class="media stream-item">
             <div class="media-body">
-              <div class="section-subheading article-title mb-0 mt-0">
-                <a href="/post/managing_research/" >Managing Research</a>
+              <div class="article-style">
+                TITLE
               </div>
-              <a href="/post/managing_research/"  class="summary-link">
-                <div class="article-style">
-                  This talk deals with several research related questions. For example findings new research ideas, choose a research topic, staying updated with new research, working with your supervisors, and more.
-                </div>
-              </a>
               <div class="stream-meta article-metadata">
                 <div class="article-metadata">
-                  <div>
-                    <span >Yonatan Bitton</span>
-                  </div>
                   <span class="article-date">
-                    Jan 5, 2022
+                    DATE
                   </span>
                   <span class="middot-divider"></span>
                   <span class="article-reading-time">
-                    0 min read
+                    LOCATION
                   </span>
                 </div>
               </div>
-            </div>
-            <div class="ml-3">
-              <a href="/post/managing_research/" >
-                <img src="/post/managing_research/featured_hub5b4b50c774fc1c76bbf2efa53919e8f_828066_150x0_resize_lanczos_3.png" alt="Managing Research" loading="lazy">
-              </a>
             </div>
           </div>
         </div>
