--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
           <div class="media stream-item">
             <div class="mr-3">
               <a href="https://whoops-benchmark.github.io/">
-                <div class="img-hover-zoom"><img src="/publication/whoops/Fig1.jpg" class="article-banner" alt="WHOOPS" loading="lazy"></div>
+                <div class="img-hover-zoom"><img src="/publication/whoops/whoops_image.jpg" class="article-banner" alt="WHOOPS! A Vision-and-Language Commonsense Benchmark of Heterogeneous Objects and Situations" loading="lazy"></div>
               </a>
             </div>
             <div class="media-body">
