--- a/index.html
+++ b/index.html
@@ -1092,6 +1092,37 @@
               </a>
             </div>
           </div>
+          <div class="media stream-item">
+            <div class="media-body">
+              <div class="section-subheading article-title mb-0 mt-0">
+                <a href="/post/managing_research/" >AirPal</a>
+              </div>
+              <a href="/post/managing_research/"  class="summary-link">
+                <div class="article-style">
+                  FILL RELEVANT DESCRIPTION
+                </div>
+              </a>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>
+                  </div>
+                  <span class="article-date">
+                    Jan 5, 2022
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="article-reading-time">
+                    0 min read
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="ml-3">
+              <a href="/post/managing_research/" >
+                <img src="/post/airpal/airpal.png" alt="AirPal" loading="lazy">
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
