--- a/index.html
+++ b/index.html
@@ -1095,9 +1095,9 @@
           <div class="media stream-item">
             <div class="media-body">
               <div class="section-subheading article-title mb-0 mt-0">
-                <a href="/post/managing_research/" >AirPal</a>
+                <a href="https://www.youtube.com/watch?v=5uM_oO-kha4&t=185s" >AirPal</a>
               </div>
-              <a href="/post/managing_research/"  class="summary-link">
+              <a href="https://www.youtube.com/watch?v=5uM_oO-kha4&t=185s"  class="summary-link">
                 <div class="article-style">
                   FILL RELEVANT DESCRIPTION
                 </div>
@@ -1108,17 +1108,17 @@
                     <span >Yonatan Bitton</span>
                   </div>
                   <span class="article-date">
-                    Jan 5, 2022
+                    Jan, 2020
                   </span>
                   <span class="middot-divider"></span>
                   <span class="article-reading-time">
-                    0 min read
+                    4 min watch
                   </span>
                 </div>
               </div>
             </div>
             <div class="ml-3">
-              <a href="/post/managing_research/" >
+              <a href="https://www.youtube.com/watch?v=FRv4veT8xoY" >
                 <img src="/post/airpal/airpal.png" alt="AirPal" loading="lazy">
               </a>
             </div>
